@@ -9,6 +9,8 @@ PHP                                                                        NEWS
 - Added FNV-1 hash support to ext/hash. (Michael Maclean)
 - Added ReflectionExtension::isTemporary() and
   ReflectionExtension::isPersistent(). (Johannes)
+- Added ReflectionZendExtension class. (Johannes)
+- Added command line option --rz to CLI. (Johannes)
 
 - default_charset if not specified is now UTF-8 instead of ISO-8859-1. (Rasmus)
 	
